--- a/templates/base.html
+++ b/templates/base.html
@@ -585,7 +585,7 @@
 
                 });
         } else {
-            alert('이미지가 아닙니다.');
+            alert('이미지가 아닙니다.1');
             return;
         }
 
