--- a/templates/content/home.html
+++ b/templates/content/home.html
@@ -61,28 +61,26 @@
                     {% comment %} href="{% url 'tag_cloud' %}">TagCloud</a> {% endcomment %}
                     {% endif %}
             </div>
-            <!-- 피드 댓글 -->
-            <div class="feed_reply">
-                <span class="feed_txt"> <b> hanmariyang </b> #가마보코3M #가을캠핑 #텐트추천 #DOD </span>
-                <span class="feed_txt"> <b> aaaa </b> 멋져욧 </span>
-                <span class="feed_txt"> <b> adsfg34 </b> 대박 </span>
-            </div>
-            <!-- 피드 댓글달기 -->
-            <form></form>
-            <form method="post" action="/tweet/comment/{{feed.id}}/">
-                {% csrf_token %}
-                <div style="display: flex; flex-direction: row; justify-content: space-between; padding: 10px 10px 0 10px; border-top: solid 1px lightgray;">
-                    <div style="display: flex; flex-direction: row;">
-                        <label for="content">댓글</label>
-                        <input id="content" type="text" name="content" > 
-                    </div>
-                    <div style="width: 40px;">
-
-                    </div>
-                    <input class="link_txt" type="submit">
-                        게시                    
-                </div>
-            </form>
+           <!-- 피드 댓글 -->
+<div class="feed_reply">
+    <span class="feed_txt"> <b> 닉네임 </b> 댓글 </span>
+    </div>
+    <!-- 피드 댓글달기 -->
+    <form></form>
+    <form method="POST" action="/tweet/comment/{{feed.id}}/">
+        {% csrf_token %}
+        <div style="display: flex; flex-direction: row; justify-content: space-between; padding: 10px 10px 0 10px; border-top: solid 1px lightgray;">
+        <div style="display: flex; flex-direction: row;">
+            <span class="material-icons-outlined">
+            sentiment_satisfied
+        </span>
+    <label for="content"></label>
+    <input id="content" type="text" style="width: 360px; height: 30px; border: none; outline: none;" placeholder="댓글 달기..." name="content" />
+    </div>
+    <input class="link_txt" style="color: #0d6efd; font-size: 12pt; border: none; background-color: #ffffff;" type="submit" />
+    </div>
+    </form>
+    </div>
         </div>
         <!-- 홈 피드 모달 팝업 -->
         <div id="home_feed_modal_{{feed.id}}" class="modal_overlay_home_feed">
